# zed-laravel

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  NEXT_STEPS.md  README.md  TESTING.md  build.sh  extension.toml
languages/blade/: config.toml
languages/php/: config.toml
src/: lib.rs
templates/: README.md
