[package]
name = "zed-laravel"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Complete Laravel support for Zed Editor: Blade, PHP, Pint, Artisan, snippets"
repository = "https://github.com/croustibat/zed-laravel"

[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.7.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
